api for listing tmname/tmid attachments
