# internal/app/http/server/server.gen.go
@@ -68,6 +68,9 @@ type ServerInterface interface {
 	// Get the content of a Thing Model by fetch name
 	// (GET /thing-models/.latest/{fetchName})
 	GetThingModelByFetchName(w http.ResponseWriter, r *http.Request, fetchName FetchName, params GetThingModelByFetchNameParams)
+	// Get the list of attachments to a TM name
+	// (GET /thing-models/.tmName/{tmName}/.attachments)
+	ListTMNameAttachmentsByName(w http.ResponseWriter, r *http.Request, tmName string, params ListTMNameAttachmentsByNameParams)
 	// Delete an attachment to a TM name
 	// (DELETE /thing-models/.tmName/{tmName}/.attachments/{attachmentFileName})
 	DeleteTMNameAttachment(w http.ResponseWriter, r *http.Request, tmName TMName, attachmentFileName AttachmentFileName, params DeleteTMNameAttachmentParams)
@@ -83,6 +86,9 @@ type ServerInterface interface {
 	// Get the content of a Thing Model by its ID
 	// (GET /thing-models/{tmID})
 	GetThingModelById(w http.ResponseWriter, r *http.Request, tmID TMID, params GetThingModelByIdParams)
+	// Get the list of attachments to a Thing Model
+	// (GET /thing-models/{tmID}/.attachments)
+	ListThingModelAttachmentsById(w http.ResponseWriter, r *http.Request, tmID TMID, params ListThingModelAttachmentsByIdParams)
 	// Delete an attachment to a Thing Model
 	// (DELETE /thing-models/{tmID}/.attachments/{attachmentFileName})
 	DeleteThingModelAttachmentByName(w http.ResponseWriter, r *http.Request, tmID TMID, attachmentFileName AttachmentFileName, params DeleteThingModelAttachmentByNameParams)
@@ -756,6 +762,45 @@ func (siw *ServerInterfaceWrapper) GetThingModelByFetchName(w http.ResponseWrite
 	handler.ServeHTTP(w, r.WithContext(ctx))
 }
 
+// ListTMNameAttachmentsByName operation middleware
+func (siw *ServerInterfaceWrapper) ListTMNameAttachmentsByName(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "tmName" -------------
+	var tmName string
+
+	err = runtime.BindStyledParameterWithOptions("simple", "tmName", mux.Vars(r)["tmName"], &tmName, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "tmName", Err: err})
+		return
+	}
+
+	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params ListTMNameAttachmentsByNameParams
+
+	// ------------- Optional query parameter "repo" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "repo", r.URL.Query(), &params.Repo)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "repo", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.ListTMNameAttachmentsByName(w, r, tmName, params)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
 // DeleteTMNameAttachment operation middleware
 func (siw *ServerInterfaceWrapper) DeleteTMNameAttachment(w http.ResponseWriter, r *http.Request) {
 	ctx := r.Context()
@@ -1008,6 +1053,45 @@ func (siw *ServerInterfaceWrapper) GetThingModelById(w http.ResponseWriter, r *h
 
 	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.GetThingModelById(w, r, tmID, params)
+	}))
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// ListThingModelAttachmentsById operation middleware
+func (siw *ServerInterfaceWrapper) ListThingModelAttachmentsById(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	// ------------- Path parameter "tmID" -------------
+	var tmID TMID
+
+	err = runtime.BindStyledParameterWithOptions("simple", "tmID", mux.Vars(r)["tmID"], &tmID, runtime.BindStyledParameterOptions{Explode: false, Required: true})
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "tmID", Err: err})
+		return
+	}
+
+	ctx = context.WithValue(ctx, BearerAuthScopes, []string{})
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params ListThingModelAttachmentsByIdParams
+
+	// ------------- Optional query parameter "repo" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "repo", r.URL.Query(), &params.Repo)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "repo", Err: err})
+		return
+	}
+
+	handler := http.Handler(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.ListThingModelAttachmentsById(w, r, tmID, params)
 	}))
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -1293,6 +1377,10 @@ func HandlerWithOptions(si ServerInterface, options GorillaServerOptions) http.H
 	r.HandleFunc(options.BaseURL+"/thing-models/{tmID:.+}/.attachments/{attachmentFileName:.+}", wrapper.GetThingModelAttachmentByName).Methods("GET")
 
 	r.HandleFunc(options.BaseURL+"/thing-models/{tmID:.+}/.attachments/{attachmentFileName:.+}", wrapper.DeleteThingModelAttachmentByName).Methods("DELETE")
+
+	r.HandleFunc(options.BaseURL+"/thing-models/.tmName/{tmName:.+}/.attachments", wrapper.ListTMNameAttachmentsByName).Methods("GET")
+
+	r.HandleFunc(options.BaseURL+"/thing-models/{tmID:.+}/.attachments", wrapper.ListThingModelAttachmentsById).Methods("GET")
 
 	r.HandleFunc(options.BaseURL+"/thing-models/.latest/{fetchName:.+}", wrapper.GetThingModelByFetchName).Methods("GET")
 
